single_cluster_gateway/k8s/store-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: v1
  template:
    metadata:
      labels:
        app: store
        version: v1
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-v1
spec:
  selector:
    app: store
    version: v1
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: v2
  template:
    metadata:
      labels:
        app: store
        version: v2
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-v2
  annotations:
    cloud.google.com/backend-config: '{"default": "store-v2-backendconfig"}' # BackendConfigを用いてヘルスチェック等をサービス毎にカスタマイズする
spec:
  selector:
    app: store
    version: v2
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-german
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: german
  template:
    metadata:
      labels:
        app: store
        version: german
    spec:
      containers:
      - name: whereami
        image: gcr.io/google-samples/whereami:v1.1.3
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-german
  annotations:
    cloud.google.com/backend-config: '{"default": "store-german-backendconfig"}' # BackendConfigを用いてヘルスチェック等をサービス毎にカスタマイズする
spec:
  selector:
    app: store
    version: german
  ports:
  - port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store-mirror-target
spec:
  replicas: 2
  selector:
    matchLabels:
      app: store
      version: mirror-target
  template:
    metadata:
      labels:
        app: store
        version: mirror-target
    spec:
      containers:
        - name: whereami
          image: gcr.io/google-samples/whereami:v1.1.3
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: store-mirror-target
spec:
  selector:
    app: store
    version: store-mirror-target
  ports:
    - port: 8080
      targetPort: 8080
