single_cluster_gateway/k8s/external-gateway.yaml
kind: Gateway
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: external-http
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
    - protocol: HTTPS
      port: 443
      routes:
        kind: HTTPRoute
        selector:
          matchLabels:
            gateway: external-http
      tls:
        mode: Terminate
        options:
          networking.gke.io/pre-shared-certs: store-example-com
