single_cluster_gateway/k8s/store-external-route.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: store-external
  labels:
    gateway: external-http
spec:
  hostnames:
    - "store.example.com"
  rules:
    - forwardTo:
        - serviceName: store-v1
          port: 8080
