single_cluster_gateway/k8s/store-route.yaml
kind: HTTPRoute
apiVersion: networking.x-k8s.io/v1alpha1
metadata:
  name: store
  labels:
    gateway: internal-http
spec:
  hostnames:
    - "store.example.com"
  rules:
    - matches:
        - path:
            type: Prefix
            value: /de
      forwardTo:
        - serviceName: store-german
          port: 8080
      filters:
        - type: RequestMirror # /de へのリクエストを Service store-mirror-target にミラーリングする
          requestMirror:
            serviceName: store-mirror-target
            port: 8080
    - matches:
        - path:
            type: Prefix
            value: /mirror
      forwardTo: # Service store-mirror-target への forwardToをなくすと Service store-mirror-target の NEG が作成されない
                 # そうすると、RequestMirror の設定がエラーになり GCLB のルールは更新されないので注意
        - serviceName: store-mirror-target
          port: 8080
    - matches:
        - headers:
            type: Exact
            values:
              env: canary
      forwardTo:
        - serviceName: store-v2
          port: 8080
    - forwardTo: # matches未指定のルールは、合致するmatchesが存在しないリクエストに対して適用される
        - serviceName: store-v1
          port: 8080
          weight: 90 # このルールが適用されるリクエストの9割を Service store-v1 にルーティングする
        - serviceName: store-v2
          port: 8080
          weight: 10 # このルールが適用されるリクエストの1割を Service store-v1 にルーティングする
